@@ -27,4 +27,4 @@ EXPOSE 8080
 
 USER spring:spring
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "--enable-native-access=ALL-UNNAMED", "-jar", "app.jar"]
